Fix horizontal scroll bar responsive in frontend.

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -141,8 +141,7 @@ body {
 /* ************** profile ******************* */
 
 .account {
-    margin-left: 20px;
-    margin-right: 20px;
+
 }
 
 .account .profile {
@@ -177,8 +176,7 @@ body {
 
 /* ************* update-password ****************** */
 .update-password {
-    margin-left: 20px;
-    margin-right: 20px;
+
 }
 
 .update-password img {
